--- a/src/app/contenidoUsr/contenidoUser.css
+++ b/src/app/contenidoUsr/contenidoUser.css
@@ -1,3 +1,12 @@
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f8f8f8;
+
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -6,7 +15,11 @@ body {
 }
 
 h1 {
-    color: #333;
+    color: #000000;
+}
+
+.respuesta p{
+    color: #000000;
 }
 
 button {
